--- a/src/view/Home.style.scss
+++ b/src/view/Home.style.scss
@@ -1,8 +1,88 @@
 @import url('../default.style.scss');
 
+
+
 .App-board {
-    background-color: lightblue;
+    overflow: hidden;
+    background: linear-gradient(#3d95e3, #578CF5);
     .App-board-in {
-        height: 55vh;
+        padding: 100px 0 100px 0;
+        color: white;
+        text-align: center;
+        h1 {
+            margin-bottom: 30px;
+            font-size:  2.5rem;
+            font-weight: 300;
+        }
+        p {
+            width: 70%;
+            margin: 40px auto 80px auto;
+            line-height: 1.7;
+            letter-spacing: 0.3px;
+            @media screen and (max-width: 769px){
+                width: 95%;
+            }
+        }
+        button {
+            border: 3px solid white;
+            border-radius: 10px;
+            width: 300px;
+            height: 50px;
+            background-color: transparent;
+            outline: none;
+            transition: all 0.4s ease;
+            span {
+                color: white;
+                font-size: 1.15rem;
+                text-transform: uppercase;
+            }
+            &:hover{
+                box-shadow: 0 15px 15px -5px rgba($color: #000, $alpha: 0.3);
+                transform: translateY(-5px);
+            }
+
+        }
     }
+}
+
+.what-is-did,
+.what-provide,
+.video-demo,
+.support-plantform {
+    // text-align: center;
+    padding: 100px 0 20px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.section-title {
+    position: relative;
+    font-size: 2rem;
+    font-weight: 300;
+    letter-spacing: -0.5px;
+    display: inline-block;
+    &::after,
+    &::before {
+        position: absolute;
+        z-index: 1;
+        background-color: black;
+        content: "";
+        width: 80px;
+        height: 1px;
+        top: 50%;
+    }
+    &::before {
+        left: -120px;
+    }
+    &::after {
+        right: -120px;
+    }
+}
+
+.cards-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
 }
