--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,12 @@ body {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition: background 1s ease;
+}
+
+.body-dark {
+  background: #89909f;
+  transition: all 1s ease;
 }
 
 code {
