添加网站Logo，目前是png格式，后续尽量换成svg，还缺少light模式下的Logo.png

--- a/src/components/Header.style.scss
+++ b/src/components/Header.style.scss
@@ -10,6 +10,12 @@ $header-color: white;
     padding: 15px 0;
 
     .header-brand {
+      display: flex;
+      align-items: center;
+      .homebrand {
+        height: 85px;
+        margin-right: 15px;
+      }
       span {
         color: $header-color;
         font-size: 2rem;
